Use Maven's repository API to download lexakai and find the jar.