@@ -17,11 +17,19 @@ import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+import org.apache.maven.plugin.MojoFailureException;
 import static org.apache.maven.plugins.annotations.InstantiationStrategy.SINGLETON;
 import org.apache.maven.plugins.annotations.LifecyclePhase;
 import org.apache.maven.plugins.annotations.Parameter;
 import org.apache.maven.plugins.annotations.ResolutionScope;
 import org.apache.maven.project.MavenProject;
+import org.eclipse.aether.RepositorySystemSession;
+import org.eclipse.aether.artifact.Artifact;
+import org.eclipse.aether.artifact.DefaultArtifact;
+import org.eclipse.aether.repository.LocalArtifactRequest;
+import org.eclipse.aether.repository.LocalArtifactResult;
+import org.eclipse.aether.repository.RemoteRepository;
+import org.eclipse.aether.repository.RepositoryPolicy;
 
 /**
  * Runs lexakai to generate documentation and diagrams for a project into some
@@ -110,7 +118,7 @@ public class LexakaiMojo extends BaseMojo
     @Override
     protected boolean isOncePerSession()
     {
-        return true;
+        return false;
     }
 
     @Override
@@ -179,17 +187,9 @@ public class LexakaiMojo extends BaseMojo
         }
     }
 
-    private ThrowingRunnable runLexakai(List<String> args)
+    private ThrowingRunnable runLexakai(List<String> args) throws Exception
     {
         return new LexakaiRunner(lexakaiJar(), args);
-//        return () ->
-//        {
-//            Lexakai.main(args.toArray(String[]::new));
-//        };
-    }
-    
-    private Path lexakaiJar() {
-        return PathUtils.home().resolve(".m2/repository/com/telenav/lexakai/lexakai/1.0.7");
     }
 
     private Set<GitCheckout> collectedChangedRepos(MavenProject prj, ThrowingRunnable toRun)
@@ -305,11 +305,33 @@ public class LexakaiMojo extends BaseMojo
         return tail + "_ASSETS_HOME";
     }
 
+    private Path lexakaiJar() throws MojoFailureException
+    {
+        // PENDING: We should pass in a target version of lexakai, not hard-code it
+        Artifact af = new DefaultArtifact("com.telenav.lexakai", "Lexakai", "jar", "1.0.7");
+        LocalArtifactRequest locArtifact = new LocalArtifactRequest();
+        locArtifact.setArtifact(af);
+        RemoteRepository remoteRepo = new RemoteRepository.Builder("central",
+                "x", "https://repo1.maven.org/maven2")
+                .build();
+        locArtifact.setRepositories(Collections.singletonList(remoteRepo));
+        RepositorySystemSession sess = session().getRepositorySession();
+        LocalArtifactResult res = sess.getLocalRepositoryManager().find(sess, locArtifact);
+        log.warn("Download result for " + af + ": " + res);
+        if (res != null && res.getFile() != null)
+        {
+            log.warn("Have local lexakai jar " + res.getFile());
+            return res.getFile().toPath();
+        }
+        throw new MojoFailureException("Could not download " + af + " from " + remoteRepo.getUrl());
+    }
+
     class LexakaiRunner implements ThrowingRunnable
     {
 
         private final Path jarFile;
         private final List<String> args;
+        private final BuildLog runLog = BuildLog.get().child("LexakaiRunner");
 
         LexakaiRunner(Path jarFile, List<String> args)
         {
@@ -326,14 +348,18 @@ public class LexakaiMojo extends BaseMojo
             {
                 URL[] url = new URL[]
                 {
-                    jarFile.toUri().toURL()
+                    new URL("jar:" + jarFile.toUri().toURL() + "!/")
                 };
+                runLog.warn("Invoke lexakai reflectivly from " + url[0]);
                 try ( URLClassLoader jarLoader = new URLClassLoader("lexakai", url, ldr))
                 {
                     Thread.currentThread().setContextClassLoader(jarLoader);
                     Class<?> what = jarLoader.loadClass("com.telenav.lexakai.Lexakai");
+                    runLog.warn("Have class " + what);
                     Method mth = what.getMethod("main", String[].class);
-                    mth.invoke(args.toArray(String[]::new));
+                    System.out.println("Have method " + mth);
+                    mth.invoke(null, (Object) args.toArray(String[]::new));
+                    System.out.println("Lexakai done.");
                 }
             } finally
             {
